# davids-fdl-tool

./: .cursorrules  .gitignore  .swiftlint.yml  CLAUDE.md  IMPLEMENTATION_BACKLOG.md  README.md  UPGRADE_PLAN.md
.cursor/rules/: fdl-spec-compliance.mdc  session-context.mdc
.github/workflows/: ci.yml
Documents/ascfdl_specification/Specification_v2.0.1/: ASCFDL_Specification_v2.0.1.md
FDLTool/: Package.swift
FDLTool/Sources/FDLTool/App/: AppState.swift  FDLToolApp.swift
FDLTool/Sources/FDLTool/CameraDB/: CameraPickerView.swift  (+1 more)
FDLTool/Tests/FDLToolTests/: CameraDBStoreTests.swift  ChartExportFailurePathTests.swift  ChartGeneratorSaveToLibraryTests.swift  LibraryStoreTests.swift  LibraryViewModelTests.swift  PythonBridgeTests.swift  ViewerSaveOutputToProjectTests.swift  ViewerViewModelTests.swift
docs/: CONFORMANCE_PLAN_V1.md  EXPORT_VALIDATION_RUNBOOK.md  LIBRARY_VALIDATION_RUNBOOK.md  SESSION_HANDOFF_2026-03-17.md
python_backend/: pyproject.toml
python_backend/fdl_backend/: __init__.py  server.py
python_backend/fdl_backend/camera_db/: __init__.py  models.py  sync.py
python_backend/fdl_backend/handlers/: __init__.py  chart_gen.py  clip_id.py  fdl_ops.py  frameline_ops.py  geometry_ops.py  image_ops.py  template_ops.py
python_backend/fdl_backend/utils/: chart_scene.py  fdl_convert.py  ffprobe.py  svg_renderer.py
python_backend/tests/: generate_workspace_conformance_report.py  test_chart_export_reliability.py  test_chart_gen.py  test_chart_renderer_parity.py  test_clip_id.py  test_fdl_ops.py  test_ffprobe.py  test_frameline_ops.py  test_geometry_ops.py  test_image_ops.py  test_server_tracing.py  test_template_ops.py  test_template_parity.py  test_workspace_template_conformance.py
python_backend/tests/artifacts/: workspace_conformance_report.json
python_backend/tests/fixtures/frameline/: README.md
resources/: AppIcon.icns
resources/camera_db/: cameras.json  schema.json
resources/fdl_schemas/: 2.0.1.schema.json  2.0.schema.json
resources/sample_fdls/: basic_4k_uhd.fdl.json  multicam_anamorphic.fdl.json
scripts/: build_app.sh  bundle_python.sh  setup.sh
(+50 files in other folders)
