[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdl-backend"
version = "0.1.0"
description = "Python backend for FDL Tool macOS app"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "svgwrite>=1.4",
]

[project.optional-dependencies]
fdl = [
    "fdl",
]
frameline = [
    "fdl-arri-frameline",
    "fdl-sony-frameline",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
full = [
    "fdl",
    "OpenImageIO",
    "cairosvg>=2.7",
    "fdl-arri-frameline",
    "fdl-sony-frameline",
]

[tool.setuptools.packages.find]
include = ["fdl_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["vendor"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from in except (noisy for simple handlers)
    "SIM108", # ternary operator (readability preference)
    "UP007",  # use X | Y for union types (keep Optional for clarity)
]

[tool.ruff.lint.isort]
known-first-party = ["fdl_backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
